# Habitua

./: README.md  config.py  main.py  pyproject.toml
dummy webpages/: Website.html  login.html  pomodoro.html  signup.html
habitua/: __init__.py  kitten.py  models.py
habitua/routes/: __init__.py  routes.py
habitua/static/: main.css  pomodoro.js
habitua/templates/: index.html
habitua/templates/part/: add_habit.html  count.html  habits.html  kitten.html  todo.html
